fix(components): Ensure icon and avatar aren't cut off in plain swirl-chip

--- a/packages/swirl-components/src/components/swirl-chip/swirl-chip.css
+++ b/packages/swirl-components/src/components/swirl-chip/swirl-chip.css
@@ -220,6 +220,11 @@
     padding-right: 0;
     padding-left: 0;
   }
+
+  & .chip__icon,
+  & .chip__avatar {
+    margin-left: 0;
+  }
 }
 
 .chip--has-progress {
